tests/invalid/for_range_too_many_args/main.py
def run_case() -> None:
    for i in range(1, 2, 3, 4):
        print(i)

if __name__ == "__main__":
    run_case()
